parser/testdata/golden/error_missing_semicolon.expected
ERROR: syntax error at line 3, column 3: expected Semicolon, found 'y'
