parser/testdata/golden/error_missing_semicolon.fbs
table Foo {
  x:int
  y:string;
}
